--- a/main.html
+++ b/main.html
@@ -11,6 +11,28 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<h1>My Playlist</h1>
+	<div class="player_one">
+		
+		<a href="https://www.youtube.com/watch?v=kd-6aw99DpA">song 1</a><br>
+		<a href="https://www.youtube.com/watch?v=9iIX4PBplAY">song 2</a><br>
+		<a href="https://www.youtube.com/watch?v=IjBAgWKW12Y ">song 3</a><br>
+		<a href="https://www.youtube.com/watch?v=puKD3nkB1h4 ">song 4</a><br>
+		<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k">song 5</a>
+	
+	</div>
+	<h1>Now Playing...</h1>
+
+	<div class="player_two ">
+		
+		<video src="https://www.w3schools.com/tags/movie.mp4" width="600" height="600" controls ></video>
+			<div class="audio">
+				<h1>MP3 songs</h1>
+					<p>Maan Meri Jaan</p>
+					<audio src="https://www.pagalworld.com.se/files/download/id/64630"  controls></audio>
+		</div>	
+	</div>
+	
 </body>
 
 </html>
