--- a/main.html
+++ b/main.html
@@ -13,23 +13,27 @@
 
 	<h1>My Playlist</h1>
 	<div class="player_one">
-		
-		<a href="https://www.youtube.com/watch?v=kd-6aw99DpA">song 1</a><br>
-		<a href="https://www.youtube.com/watch?v=9iIX4PBplAY">song 2</a><br>
-		<a href="https://www.youtube.com/watch?v=IjBAgWKW12Y ">song 3</a><br>
-		<a href="https://www.youtube.com/watch?v=puKD3nkB1h4 ">song 4</a><br>
-		<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k">song 5</a>
-	
+		<ul>
+		<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA">song 1</a></li><br>
+		<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY">song 2</a></li><br>
+		<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y ">song 3</a></li><br>
+		<li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4 ">song 4</a></li><br>
+		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k">song 5</a></li>
+		</ul>
 	</div>
-	<h1>Now Playing...</h1>
+	<h2>Now Playing...</h2>
 
 	<div class="player_two ">
 		
-		<video src="https://www.w3schools.com/tags/movie.mp4" width="600" height="600" controls ></video>
+		<video width="600" height="600" controls >
+			<source src="https://www.w3schools.com/tags/movie.mp4" >
+		</video>
 			<div class="audio">
-				<h1>MP3 songs</h1>
+				<h2>MP3 songs</h2>
 					<p>Maan Meri Jaan</p>
-					<audio src="https://www.pagalworld.com.se/files/download/id/64630"  controls></audio>
+					<audio  controls>
+						<source src="https://www.pagalworld.com.se/files/download/id/64630">
+					</audio>
 		</div>	
 	</div>
 	
