--- a/main.html
+++ b/main.html
@@ -14,11 +14,11 @@
 	<h1>My Playlist</h1>
 	<div class="player_one">
 		<ul>
-		<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA">song 1</a></li><br>
-		<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY">song 2</a></li><br>
-		<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y ">song 3</a></li><br>
-		<li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4 ">song 4</a></li><br>
-		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k">song 5</a></li>
+		<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">song 1</a></li><br>
+		<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY"target="_blank">song 2</a></li><br>
+		<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y"target="_blank">song 3</a></li><br>
+		<li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4"target="_blank">song 4</a></li><br>
+		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k"target="_blank">song 5</a></li>
 		</ul>
 	</div>
 	<h2>Now Playing...</h2>
@@ -26,13 +26,13 @@
 	<div class="player_two ">
 		
 		<video width="600" height="600" controls >
-			<source src="https://www.w3schools.com/tags/movie.mp4" >
+			<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
 		</video>
 			<div class="audio">
 				<h2>MP3 songs</h2>
 					<p>Maan Meri Jaan</p>
 					<audio  controls>
-						<source src="https://www.pagalworld.com.se/files/download/id/64630">
+						<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3">
 					</audio>
 		</div>	
 	</div>
